--- a/album/templates/album/web/album.html
+++ b/album/templates/album/web/album.html
@@ -13,57 +13,24 @@
         ul, p, label{
             margin-bottom: auto;
         }
-        #album:before{
-            content: ' ';
-            display: table;
-        }
-        .stack-panel{
+        #album {
             position: absolute;
+            left: 0;
+            top: 0;
             width: 100%;
             height: 100%;
             background-color: #ffffff;
-            left: 0;
-            top: 0;
         }
-        .stack-panel-1{
-            z-index: 1;
-        }
-        .stack-panel-2{
-            z-index: 2;
-        }
-        .stack-panel-3{
-            z-index: 3;
-        }
-        .right-panel-selector{
-            position: absolute;
-            left: 100%;
-            top: 0;
-            width: 100%;
-            transition: left 0.2s;
-            display: none;
-        }
-    </style>
-    <style>
-        #musicSelect .weui-cells {
-            overflow: auto;
-        }
-        #musicSelect .weui-cells:before {
-            border-top: none;
-        }
-    </style>
-    <style>
-        #templateSelect .weui-cells {
-            overflow: auto;
-        }
-        #templateSelect .weui-cells:before {
-            border-top: none;
+        #album:before{
+            content: ' ';
+            display: table;
         }
     </style>
 {% endblock %}
 
 {% block container %}
     {% verbatim %}
-    <div class="stack-panel stack-panel-1" id="album" v-cloak>
+    <div id="album" v-cloak>
         <p class="weui-cells__title">照片上传</p>
         <div class="weui-cells weui-cells_form" id="uploaderCustom">
             <div class="weui-cell">
@@ -113,91 +80,33 @@
             </span>
         </div>
     </div>
-
-    <div class="stack-panel stack-panel-2 right-panel-selector" id="musicSelect" v-cloak>
-        <div class="weui-navbar" style="position: initial;">
-            <div class="weui-navbar__item"
-                 style="padding: 5px 0;"
-                 :class="{'weui-bar__item_on text-danger border-bottom border-danger': musicTag.active}"
-                 :data-id="musicTag.id"
-                 @click="tagMusicTag(musicTag)"
-                 v-for="musicTag in musicTags">
-                {{ musicTag.name }}
-            </div>
-        </div>
-        <div class="weui-search-bar" id="searchBar">
-            <div class="weui-search-bar__form">
-                <div class="weui-search-bar__box">
-                    <i class="weui-icon-search"></i>
-                    <input type="search" class="weui-search-bar__input" placeholder="搜索" required=""
-                           @input="getMusics"
-                           v-model="search">
-                    <a href="javascript:" class="weui-icon-clear" @click="clearSearch"></a>
-                </div>
-                <label class="weui-search-bar__label">
-                    <i class="weui-icon-search"></i>
-                    <span>搜索</span>
-                </label>
-            </div>
-            <a href="javascript:" class="weui-search-bar__cancel-btn" @click="clearSearch">取消</a>
-        </div>
-        <div class="weui-cells mt-0">
-            <audio :src="music.url || music.file" autoplay="autoplay" loop="loop" v-if="music"></audio>
-            <span class="weui-cell weui-cell_access" v-for="music, i in musics">
-                <div class="weui-cell__hd" @click="selectMusic(music)"><i class="fa fa-music text-success d-block" style="width:20px;margin-right:5px;"></i></div>
-                <div class="weui-cell__bd weui-cell_primary" @click="selectMusic(music)">
-                    <p>{{ music.name }}</p>
-                </div>
-                <span class="fa fa-play-circle-o"
-                      :class="{'fa-pause-circle-o': music.active}"
-                      @click="playMusic(i, music)"></span>
-            </span>
-        </div>
-    </div>
-
-    <div class="stack-panel stack-panel-3 right-panel-selector" id="templateSelect" v-cloak>
-        <div class="weui-navbar" style="position: initial;">
-            <div class="weui-navbar__item"
-                 style="padding: 5px 0;"
-                 :class="{'weui-bar__item_on text-danger border-bottom border-danger': templateTag.active}"
-                 :data-id="templateTag.id"
-                 @click="tagTemplateTag(templateTag)"
-                 v-for="templateTag in templateTags">
-                {{ templateTag.name }}
-            </div>
-        </div>
-        <div class="weui-cells mt-0">
-            <span class="weui-cell weui-cell_access" @click="selectTemplate(template)" v-for="template, i in templates">
-                <div class="weui-cell__hd"><img alt=""
-                                                class="rounded-circle d-block"
-                                                :src="template.cover_url || template.cover"
-                                                 style="width:50px;height:50px;margin-right:5px;"></div>
-                <div class="weui-cell__bd weui-cell_primary">
-                    <p>{{ template.name }}</p>
-                </div>
-                <span class="weui-cell__ft"></span>
-            </span>
-        </div>
-    </div>
     {% endverbatim %}
+
+    {% include './components/template_select.html' %}
+    {% include './components/music_select.html' %}
 {% endblock %}
-
-
 
 {% block bottom_js %}
     {{ block.super }}
 {% endblock %}
 {% block local_js %}
 <script type="text/javascript">
-    var context = {
+    $.extend(context, {
         pk: {{ pk }},
         albumDetailApiUrl: '{% url "album:web:api:album-detail" pk %}',
         albumPictureApiUrl: '{% url "album:web:api:album-picture" pk %}',
-        templateTagApiUrl: '{% url "album:web:api:template-tag-list" %}',
-        templateApiUrl: '{% url "album:web:api:template-list" %}',
-        musicTagApiUrl: '{% url "album:web:api:music-tag-list" %}',
-        musicApiUrl: '{% url "album:web:api:music-list" %}',
-    }
+
+        selectTemplate: function (template) {
+            aVue.album.template_data = template;
+            http.patch(context.albumDetailApiUrl, {template: template.id}, function () {
+                aVue.getAlbum();
+            });
+        },
+        selectMusic: function (music) {
+            aVue.album.music_data = music;
+            http.patch(context.albumDetailApiUrl, {music: music.id}, function () {});
+        },
+    });
 </script>
 <script type="text/javascript">
 var aVue = new Vue({
@@ -217,6 +126,7 @@ var aVue = new Vue({
                 id: '',
                 name: '',
                 cover: '',
+                cover_url: '',
             },
         },
 
@@ -303,8 +213,6 @@ var aVue = new Vue({
                 // return true; // 阻止默认行为，不插入预览图的框架
             },
             onQueued: function(){
-                console.log(this);
-
                 // console.log(this.status); // 文件的状态：'ready', 'progress', 'success', 'fail'
                 // console.log(this.base64); // 如果是base64上传，file.base64可以获得文件的base64
 
@@ -314,17 +222,14 @@ var aVue = new Vue({
                 // return true; // 阻止默认行为，不显示预览图的图像
             },
             onBeforeSend: function(data, headers){
-                console.log(this, data, headers);
                 $.extend(data, {picture__seq: vue.pictureSeq + this.id}); // 可以扩展此对象来控制上传参数
                 $.extend(headers, {'X-CSRFToken': csrftoken}); // 可以扩展此对象来控制上传头部
                 // return false; // 阻止文件上传
             },
             onProgress: function(procent){
-                console.log(this, procent);
                 // return true; // 阻止默认行为，不使用默认的进度显示
             },
             onSuccess: function (ret) {
-                console.log(this, ret);
                 $('#uploaderCustomFiles li[data-id=' + this.id + ']').remove();
                 vue.album.picture_list.push(ret);
                 vue.album.picture_list.sort(function (a, b) {
@@ -337,212 +242,11 @@ var aVue = new Vue({
                 // return true; // 阻止默认行为，不使用默认的成功态
             },
             onError: function(err){
-                console.log(this, err);
                 // return true; // 阻止默认行为，不使用默认的失败态
             }
         });
     }
 
-});
-</script>
-
-<script type="text/javascript">
-var mVue = new Vue({
-    el: '#musicSelect',
-    data: {
-        musicTags: [],
-        musics: [],
-
-        allMuiscTag: {
-            id: '',
-            name: '全部',
-            active: true,
-        },
-        musicTag: null,
-        search: '',
-        music: null,
-    },
-    methods: {
-        getMusicTags: function () {
-            var vue = this;
-            http.get(context.musicTagApiUrl, {}, function (res) {
-                vue.allMuiscTag.active = true;
-                vue.musicTags = [vue.allMuiscTag].concat(res.rows);
-                vue.getMusics();
-            });
-        },
-        tagMusicTag: function(musicTag) {
-            var vue = this;
-            if (musicTag.active) {
-                return;
-            }
-
-            if (vue.musicTag) {
-                Vue.set(vue.musicTag, 'active', false);
-            }
-            Vue.set(musicTag, 'active', true);
-            vue.musicTag = musicTag;
-            vue.getMusics();
-        },
-        getMusics: function () {
-            var vue = this;
-            http.get(context.musicApiUrl, {
-                tag: vue.musicTag.id,
-                search: vue.search,
-            }, function (res) {
-                vue.musics = res.rows;
-                $.each(vue.musics, function (i, music) {
-                    if (vue.music && vue.music.id == music.id) {
-                        music.active = true;
-                    }
-                });
-            });
-        },
-        clearSearch: function () {
-            this.search = '';
-            this.getMusics();
-        },
-        playMusic: function (i, music) {
-            var vue = this;
-            if (music == vue.music) {
-                Vue.set(music, 'active', !music.active);
-
-                var audio = $(vue.$el).find('audio')[0];
-                if (music.active) {
-                    audio.play();
-                } else {
-                    audio.pause();
-                }
-                return;
-            }
-
-            if (vue.music) {
-                Vue.set(vue.music, 'active', false);
-            }
-            Vue.set(music, 'active', true);
-            Vue.set(vue.musics, i, music);
-            Vue.set(vue, 'music', music);
-        },
-        fixListPanelHeight: function () {
-            var height = document.documentElement.clientHeight - $(this.$el).find('.weui-navbar').outerHeight() - $(this.$el).find('.weui-search-bar').outerHeight();
-            $(this.$el).find('.weui-cells').height(height);
-        },
-        show: function () {
-            docUtil.setTitle('选择音乐');
-            $(this.$el).show().css('left', 0);
-            this.fixListPanelHeight();
-        },
-        hide: function () {
-            docUtil.revertTitle();
-            $(this.$el).css('left', '100%').hide();
-        },
-        selectMusic: function (music) {
-            this.hide();
-
-            aVue.album.music_data = music;
-            http.patch(context.albumDetailApiUrl, {music: music.id}, function () {
-                
-            })
-        },
-    },
-    mounted: function () {
-        weui.searchBar('#searchBar');
-
-        var vue = this;
-        vue.musicTag = vue.allMuiscTag;
-        vue.getMusicTags();
-    }
-});
-</script>
-
-
-<script type="text/javascript">
-var tVue = new Vue({
-    el: '#templateSelect',
-    data: {
-        templateTags: [],
-        templates: [],
-
-        hotTemplateTag: {
-            id: '-1',
-            name: '热门',
-            active: true,
-        },
-        lastTemplateTag: {
-            id: '-2',
-            name: '最新',
-            active: false,
-        },
-        templateTag: null,
-        search: '',
-        template: null,
-    },
-    methods: {
-        getTemplateTags: function () {
-            var vue = this;
-            http.get(context.templateTagApiUrl, {}, function (res) {
-                vue.hotTemplateTag.active = true;
-                vue.templateTags = [vue.hotTemplateTag, vue.lastTemplateTag].concat(res.rows);
-                vue.getTemplates();
-            });
-        },
-        tagTemplateTag: function(templateTag) {
-            var vue = this;
-            if (templateTag.active) {
-                return;
-            }
-
-            if (vue.templateTag) {
-                Vue.set(vue.templateTag, 'active', false);
-            }
-            Vue.set(templateTag, 'active', true);
-            vue.templateTag = templateTag;
-            vue.getTemplates();
-        },
-        getTemplates: function () {
-            var vue = this;
-            http.get(context.templateApiUrl, {
-                tag: vue.templateTag.id,
-                search: vue.search,
-            }, function (res) {
-                vue.templates = res.rows;
-                $.each(vue.templates, function (i, template) {
-                    if (vue.template && vue.template.id == template.id) {
-                        template.active = true;
-                    }
-                });
-            });
-        },
-        clearSearch: function () {
-            this.search = '';
-            this.getTemplates();
-        },
-        fixListPanelHeight: function () {
-            var height = document.documentElement.clientHeight - $(this.$el).find('.weui-navbar').outerHeight();
-            $(this.$el).find('.weui-cells').height(height);
-        },
-        show: function () {
-            docUtil.setTitle('选择模板');
-            $(this.$el).show().css('left', 0);
-            this.fixListPanelHeight();
-        },
-        hide: function () {
-            docUtil.revertTitle();
-            $(this.$el).css('left', '100%').hide();
-        },
-        selectTemplate: function (template) {
-            this.hide();
-            aVue.album.template_data = template;
-            http.patch(context.albumDetailApiUrl, {template: template.id}, function () {
-                aVue.getAlbum();
-            })
-        },
-    },
-    mounted: function () {
-        var vue = this;
-        vue.templateTag = vue.hotTemplateTag;
-        vue.getTemplateTags();
-    }
 });
 </script>
 {% endblock %}
