--- a/album/templates/album/web/album_display.html
+++ b/album/templates/album/web/album_display.html
@@ -12,6 +12,7 @@
 {% block top_css %}
     {{ block.super }}
     <link type="text/css" rel="stylesheet" href="{% static 'base/common/lib/animate/animate.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'base/common/lib/magic/magic.css' %}">
 {% endblock %}
 
 {% block local_css %}
