--- a/album/templates/album/web/components/template_select.html
+++ b/album/templates/album/web/components/template_select.html
@@ -2,12 +2,12 @@
 <style>
     #templateSelect {
         position: absolute;
-        left: 100%;
+        z-index: 10;
+        left: 0;
         top: 0;
         width: 100%;
         height: 100%;
         background-color: #ffffff;
-        transition: left 0.2s;
         display: none;
     }
     #templateSelect .weui-cells {
@@ -120,12 +120,14 @@
                 },
                 show: function () {
                     docUtil.setTitle('选择模板');
-                    $(this.$el).show().css({'z-index': 10, 'left': 0});
+                    $(this.$el).animateCss('slideInRight').show();
                     this.fixListPanelHeight();
                 },
                 hide: function () {
                     docUtil.revertTitle();
-                    $(this.$el).css('left', '100%').hide();
+                    $(this.$el).animateCss('slideOutRight', function ($el) {
+                        $el.hide();
+                    });
                 },
                 selectTemplate: function (template) {
                     this.hide();
