--- a/album/templates/album/web/album.html
+++ b/album/templates/album/web/album.html
@@ -11,246 +11,20 @@
 {% block top_css %}
     {{ block.super }}
     <link type="text/css" rel="stylesheet" href="{% static 'base/common/lib/animate/animate.css' %}">
-    <link type="text/css" rel="stylesheet" href="{% static 'base/common/lib/magic/magic.css' %}">
 {% endblock %}
 
 {% block local_css %}
-    <style type="text/css">
-        ul, p, label{
-            margin-bottom: auto;
-        }
-        #album {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #ffffff;
-        }
-        #album:before{
-            content: ' ';
-            display: table;
-        }
-    </style>
+
 {% endblock %}
 
 {% block container %}
-    {% verbatim %}
-    <div id="album" v-cloak>
-        <p class="weui-cells__title">照片上传</p>
-        <div class="weui-cells weui-cells_form" id="uploaderCustom">
-            <div class="weui-cell">
-                <div class="weui-cell__bd">
-                    <div class="weui-uploader">
-                        <div class="weui-uploader__hd d-none"><p class="weui-uploader__title">照片上传</p></div>
-                        <div class="weui-uploader__bd">
-                            <ul class="weui-uploader__files" id="uploaderCustomFiles">
-                                <li class="weui-uploader__file"
-                                    :data-seq="picture.seq"
-                                    :style="'background-image: url(' + picture.image + ');'"
-                                    @click="displayPicture(picture)"
-                                    v-for="picture in album.picture_list"></li>
-
-                            </ul>
-                            <div class="weui-uploader__input-box"><input id="uploaderCustomInput"
-                                                                         class="weui-uploader__input" type="file"
-                                                                         accept="image/*" multiple=""></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <p class="weui-cells__title">相册模板</p>
-        <div class="weui-cells">
-            <span class="weui-cell weui-cell_access">
-                <div class="weui-cell__hd"><img :src="album.template_data ? (album.template_data.cover_url || album.template_data.cover) : ''"
-                                                class="d-block"
-                                                alt=""
-                                                style="width:20px;height:20px;margin-right:5px;"></div>
-                <div class="weui-cell__bd weui-cell_primary" @click="enterSelectTemplate">
-                    <p>{{ album.template_data ? album.template_data.name : '未选择' }}</p>
-                </div>
-                <span class="weui-cell__ft" @click="enterSelectTemplate"></span>
-            </span>
-        </div>
-
-        <p class="weui-cells__title">相册音乐</p>
-        <div class="weui-cells">
-            <span class="weui-cell weui-cell_access">
-                <div class="weui-cell__hd"><i class="fa fa-music text-success d-block" style="width:20px;margin-right:5px;"></i></div>
-                <div class="weui-cell__bd weui-cell_primary" @click="enterSelectMusic">
-                    <p>{{ album.music_data ? album.music_data.name : '未选择' }}</p>
-                </div>
-                <span class="weui-cell__ft" @click="enterSelectMusic"></span>
-            </span>
-        </div>
-    </div>
-    {% endverbatim %}
-
-    {% include './components/template_select.html' %}
-    {% include './components/music_select.html' %}
+    {% include './components/album_edit.html' %}
 {% endblock %}
 
 {% block bottom_js %}
     {{ block.super }}
 {% endblock %}
+
 {% block local_js %}
-<script type="text/javascript">
-    $.extend(context, {
-        pk: {{ pk }},
-        albumDetailApiUrl: '{% url "album:web:api:album-detail" pk %}',
-        albumPictureApiUrl: '{% url "album:web:api:album-picture" pk %}',
 
-        selectTemplate: function (template) {
-            if (aVue.album.template_data && template.id == aVue.album.template_data.id) {
-                return;
-            }
-            aVue.album.template_data = template;
-            http.patch(context.albumDetailApiUrl, {template: template.id}, function () {
-                aVue.getAlbum();
-            });
-        },
-        selectMusic: function (music) {
-            if (aVue.album.music_data && music.id == aVue.album.music_data.id) {
-                return;
-            }
-            aVue.album.music_data = music;
-            http.patch(context.albumDetailApiUrl, {music: music.id}, function () {});
-        },
-    });
-</script>
-<script type="text/javascript">
-var aVue = new Vue({
-    el: '#album',
-    data: {
-        album: {
-            name: '',
-            desc: '',
-            picture_list: [],
-            music_data: null,
-            template_data: null,
-        },
-
-        pictureSeq: 0,
-    },
-    methods: {
-        getAlbum: function () {
-            var vue = this;
-            http.get(context.albumDetailApiUrl, {}, function(res){
-                vue.album = res;
-                vue.getPictureSeq();
-            });
-        },
-        getPictureSeq: function () {
-            var vue = this;
-            $.each(vue.album.picture_list, function (i, picture) {
-                if (vue.pictureSeq < picture.seq) {
-                    vue.pictureSeq = picture.seq;
-                }
-            });
-        },
-        displayPicture: function (picture) {
-            var vue = this;
-            var gallery = weui.gallery(picture.image, {
-                onDelete: function(){
-                    if(confirm('确定删除该图片？')){
-                        http.delete(context.albumPictureApiUrl, {
-                            picture__id: picture.id,
-                        }, function () {
-                            var pictureList = vue.album.picture_list;
-                            pictureList.splice(pictureList.indexOf(picture), 1);
-                        })
-                    }
-                    gallery.hide();
-                }
-            });
-        },
-        show: function () {
-            docUtil.setTitle('编辑相册');
-            $(this.$el).show().css('left', 0);
-        },
-        hide: function () {
-            docUtil.revertTitle();
-            $(this.$el).css('left', '100%').hide();
-        },
-        enterSelectMusic: function () {
-            mVue.musicId = this.album.music_data ? this.album.music_data.id : null;
-            mVue.show();
-        },
-        enterSelectTemplate: function () {
-            tVue.templateId = this.album.template_data ? this.album.template_data.id : null;
-            tVue.show();
-        },
-    },
-    mounted: function () {
-        var vue = this;
-
-        vue.getAlbum();
-
-        weui.uploader('#uploaderCustom', {
-            url: context.albumPictureApiUrl,
-            auto: true,
-            type: 'file',
-            fileVal: 'picture__image',
-            compress: {
-                width: 1600,
-                height: 1600,
-                quality: .8
-            },
-            onBeforeQueued: function(files) {
-                // `this` 是轮询到的文件, `files` 是所有文件
-
-                if (["image/jpg", "image/jpeg", "image/png", "image/gif"].indexOf(this.type) < 0) {
-                    weui.alert('请上传图片');
-                    return false; // 阻止文件添加
-                }
-                if (this.size > 10 * 1024 * 1024) {
-                    weui.alert('请上传不超过10M的图片');
-                    return false;
-                }
-                if (files.length > 9) { // 防止一下子选择过多文件
-                    weui.alert('每次最多只能上传9张图片，请重新选择');
-                    return false;
-                }
-
-                // return true; // 阻止默认行为，不插入预览图的框架
-            },
-            onQueued: function(){
-                // console.log(this.status); // 文件的状态：'ready', 'progress', 'success', 'fail'
-                // console.log(this.base64); // 如果是base64上传，file.base64可以获得文件的base64
-
-                // this.upload(); // 如果是手动上传，这里可以通过调用upload来实现；也可以用它来实现重传。
-                // this.stop(); // 中断上传
-
-                // return true; // 阻止默认行为，不显示预览图的图像
-            },
-            onBeforeSend: function(data, headers){
-                $.extend(data, {picture__seq: vue.pictureSeq + this.id}); // 可以扩展此对象来控制上传参数
-                $.extend(headers, {'X-CSRFToken': csrftoken}); // 可以扩展此对象来控制上传头部
-                // return false; // 阻止文件上传
-            },
-            onProgress: function(procent){
-                // return true; // 阻止默认行为，不使用默认的进度显示
-            },
-            onSuccess: function (ret) {
-                $('#uploaderCustomFiles li[data-id=' + this.id + ']').remove();
-                vue.album.picture_list.push(ret);
-                vue.album.picture_list.sort(function (a, b) {
-                    if (a.seq < b.seq) {
-                        return -1;
-                    } else {
-                        return 1;
-                    }
-                });
-                // return true; // 阻止默认行为，不使用默认的成功态
-            },
-            onError: function(err){
-                // return true; // 阻止默认行为，不使用默认的失败态
-            }
-        });
-    }
-
-});
-</script>
 {% endblock %}
